# World_Cup-verifier

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
miden/: miden.d.ts  miden.js  miden_bg.wasm  miden_bg.wasm.d.ts  package.json
pkg/: package.json  rescue.d.ts  rescue.js  rescue_bg.wasm  rescue_bg.wasm.d.ts
src/: credential.json  main.rs  parse.ts  program.ts  verify.ts  zkp_result.json
src/helpers/: mod.rs  parse.rs  world_cup_verify.rs
src/leaf_handler/src/: leaf_handler.ts
