[package]
name = "world_cup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miden = {git = "https://github.com/jonathanxuu/miden.git", branch = "dev", default-features = false}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", default-features = false, optional = true }
sha3 = "0.10.6"

[features]
default = ["std"]
std = [ "hex/std"]
